crates/swc/tests/tsc-references/assignmentCompatWithObjectMembers5_es5.1.normal.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var C = function C() {
    "use strict";
    _classCallCheck(this, C);
};
var c;
var i;
c = i; // error
i = c; // error
